# src/routes/authRouter.js
@@ -1,6 +1,6 @@
 var express = require('express')
 var router = express.Router()
-const authController = require("../sqlControllers/authController/index");
+const authController = require("../controllers/authController/index");
 
 // middleware that is specific to this router
 router.use(function timeLog (req, res, next) {
@@ -8,6 +8,8 @@ router.use(function timeLog (req, res, next) {
   next()
 })
 
-router.get('/', authController.apiGetAllUsers)
+router.get('/users', authController.users);
+router.post('/register', authController.register);
+router.post('/signin', authController.signin);
 
 module.exports = router
